# C_Compiler

./: 43 基于简单优先法的微型程序语言编译器设计与实现.docx  CLAUDE.md  CMakeLists.txt  Lexer.md  Paser.md  README.md  generate_report.py  generate_report_week2.py  main.cpp  test.txt  test_bubble.txt  test_char.txt  test_input.txt  test_read.txt  test_simple.txt  todolist.md  tokens.txt  实验总结.md  第一周工作周报.docx  第二周工作周报.docx  编译器前端说明.md  编译器四阶段审查报告.md
include/: AST.h  CodegenVisitor.h  ErrorHandler.h  Grammar.h  Lexer.h  PrecedenceParser.h  SemanticAnalyzer.h  SymbolTable.h  Token.h
output/Codegen/: Main.asm  Main.hack  Main.vm  quads.txt  target.vm
output/Lexer/: tokens.txt
output/Parser/: ast.txt  firstvt.txt  lastvt.txt  parse_tree.txt  precedence_table.txt  (+2 more)
report/: AGENT使用说明.md  PPT大纲.md  generate_chapter2.py  generate_chapter3.py  generate_chapter4.py  generate_references.py  generate_report.py  代码讲解说明.md  参考文献.docx  周报_2026-06-27.docx  第一章_实训任务概述.md  第三章_系统开发.docx  第二章_系统分析.docx  第四章_实训小结.docx  课程报告_基于简单优先法的微型程序语言编译器设计与实现.docx
src/: AST.cpp  CodegenVisitor.cpp  ErrorHandler.cpp  Grammar.cpp  Lexer.cpp  PrecedenceParser.cpp  SemanticAnalyzer.cpp  SymbolTable.cpp
test/: README.md  SUMMARY.md  test_bubble.txt  test_flow.cmp  test_flow.tst  test_flow.txt
tools/: README.md  VMTranslator.cpp  minimal_test.hack  minimal_test_opt.hack  test.cmp  test.tst  test_complete.asm  test_complete.vm  test_complete_fixed.asm  test_nand2tetris.asm  test_nand2tetris.hack  test_nand2tetris.tst  test_nand2tetris.vm  test_nand2tetris_opt.hack  test_simple.asm  test_simple.vm
verify_test/: Main.vm
